k8s/kcm.obmondo.com/kube-prometheus/loki-stack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-stack
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-cert-manager
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik-cert-manager
  rules:
    - host: loki.kcm.obmondo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-stack
                port:
                  number: 3100
  tls:
    - hosts:
        - loki.kcm.obmondo.com
      secretName: loki-kcm-obmondo-com-tls
